lab1/Test/L1-A-11-8.cmm
float ;
struct _ql4hvZ1RD {
  int I_8W5tEieOy59 [ 2127064152 ] = UV = && L04sXGQXEyFZpUH6c 
    == FSR6Luq9_hk8 - _8KlLS / ! - - ( izpL9hE || klDe_TeJY 
    <= PP + WrXzvqR6ro [ _puaxlJap3i_ ( ZGwUCjoABre , 
    s1qdxevd > FUuF4 + eYD_ [ fqEo27HnxU6NGv0XB7b != e5mkHffTkNH7gxxGAq_ 
    - IHGl9 / PnPFJnVDVhJbX [ YSIpy2hIiuePwXY = x < pxEhCXbQN 
    * ! ! BhvlkPPn_zYqMfqD1q0F ( zX9ANfIPPmiqCWR && RtaT2g_bl92 
    * 1799142749.1757954085 ) ] >= - Z - ! - - ! 1036455968 
    ] ) . BST0ZRMwMB8Dtjxj3LAO ] ) * ia ( ) ;
}vw 
;
struct euuGkGPIt2m0__V5g * ;
int p ( int DtWkTXmUcY3P , struct pJy697UXTP3wSILOLnOY 
  J9BC == ) {
  int YnKqT3ArGN , wb6Cc6yRLwa79 == ;
{
  }}
struct {
};
int NXX_fBUjR ( ) {
}
int ;
int ;
int ;
int ;
int xf1gS ( {
}
int + ;
int F_8_ , q2Ka2GpwQg 


int z18m ( ) {
  if ( EixWdK )   if ( atQGXvx8yhabqkbYMJk4 )   PYtsa864Tq0GPqn0L 
    ;
else   while ( M )   rL4 ;


else   if ( bKkX_aRBWVsmIq )   if ( t2zEtaZ5SDREr41S7i5 
    )   if GRQSHduCAPD4JRi )   ZWl ;
else   if ( KF3C8R )   return VdSK2twGxjyBa ;





}
int ;= 
int ;
